# marketopy

./: LICENSE  README.md  pyproject.toml
src/marketopy_cpanella/: __init__.py  activities.py  asset.py  authentication.py  base.py  companies.py  config_reader.py  custom_objects.py  field_list.py  field_types.py  fields.py  identity.py  lead_database.py  marketo.py  marketopy.py  named_accounts.py  opportunities.py  opportunity_roles.py  program_members.py  sales_persons.py  subscriptions.csv  user_management.py
