[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marketopy"
version = "0.1.0"
description = "A Python library for interacting with the Marketo API"
authors = [{name = "Your Name", email = "your.email@example.com"}]
dependencies = [
    "requests>=2.25.0",
]
requires-python = ">=3.7"
readme = "README.md"
license = {file = "LICENSE"}

[project.urls]
Homepage = "https://github.com/yourusername/marketopy"
Repository = "https://github.com/yourusername/marketopy.git"
